--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_YOUTUBE_API_KEY='AIzaSyD_KJoG9AJRPWRxB5WroNpX2yh3-V-TxmY'
+REACT_APP_YOUTUBE_API_KEY=AIzaSyD_KJoG9AJRPWRxB5WroNpX2yh3-V-TxmY
+GENERATE_SOURCEMAP=false
